@@ -1,3 +1,9 @@
+2006-10-12  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* build-mingw32ce.sh : Make ${BUILD_DIR} absolute in default case.
+	* build-cegcc.sh : Likewise.
+	(build_gcc) : Switch to pushd/popd.
+
 2006-10-10  Danny Backx <dannybackx@users.sourceforge.net>
 	* Remove src/w32api-3.7. It is still possible to recover
 	it from SVN by using the svn versioning mechanisms,
